--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
-﻿{
+{
   "crons": [
     {
-      "path": "/api/offers/refresh",
-      "schedule": "0 */6 * * *"
+      "path": "/api/import/offers",
+      "schedule": "0 * * * *"
     }
   ]
 }
