Fix: Downgrade Tailwind to v3, fix PostCSS config and DB sync

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:fix": "npx prisma db push && npx prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
@@ -15,17 +16,20 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "24.10.1",
     "@types/react": "19.2.6",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.5.6",
     "prisma": "^6.19.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "3.4",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": "20.x"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
